refactor: HttpResponse 리팩토링